@@ -49,12 +49,22 @@ AC_PROVIDE([AC_CONFIG_AUX_DIR_DEFAULT])
 AC_CONFIG_SUBDIRS([$1])dnl
 ])
 
+dnl FFCALL_CACHE_EGREP_CPP(what,variable,condition)
 AC_DEFUN([FFCALL_CACHE_EGREP_CPP],
 [AC_CACHE_CHECK([for $1], [$2], [AC_EGREP_CPP(yes,
 [#if $3
   yes
 #endif
 ], [$2=yes], [$2=no])])])
+
+dnl FFCALL_SET_CPU_ABI(what,variable,condition,yes_abi,no_abi)
+AC_DEFUN([FFCALL_SET_CPU_ABI],
+[FFCALL_CACHE_EGREP_CPP([$1],[$2],[$3])
+if test $$2 = yes; then
+  host_cpu_abi=$4
+else
+  host_cpu_abi=$5
+fi])
 
 AC_DEFUN([FFCALL_CANONICAL_HOST_CPU],
 [AC_REQUIRE([AC_CANONICAL_HOST])AC_REQUIRE([AC_PROG_CC])
@@ -77,13 +87,8 @@ changequote(,)dnl
     ;;
 changequote([,])dnl
   arm* )
-    FFCALL_CACHE_EGREP_CPP([ARMel], ffcall_cv_host_armel,
-      [defined(__ARMEL__)])
-    if test $ffcall_cv_host_armel = yes; then
-      host_cpu_abi=armel
-    else
-      host_cpu_abi=arm
-    fi
+    FFCALL_SET_CPU_ABI([ARMel], ffcall_cv_host_armel,
+      [defined(__ARMEL__)],armel,arm)
     ;;
   mips* )
 dnl We should also check for (_MIPS_SZPTR == 64), but gcc keeps this at 32.
@@ -95,45 +100,26 @@ dnl We should also check for (_MIPS_SZPTR == 64), but gcc keeps this at 32.
 dnl Strictly speaking, the MIPS ABI (-32 or -n32) is independent from the CPU
 dnl identification (-mips[12] or -mips[34]). But -n32 is commonly used together
 dnl with -mips3, and it's easier to test the CPU identification.
-      FFCALL_CACHE_EGREP_CPP([MIPS with n32 ABI], ffcall_cv_host_mipsn32,
-        [__mips >= 3])
-      if test $ffcall_cv_host_mipsn32 = yes; then
-        host_cpu_abi=mipsn32
-      else
-        host_cpu_abi=mips
-      fi
+      FFCALL_SET_CPU_ABI([MIPS with n32 ABI], ffcall_cv_host_mipsn32,
+        [__mips >= 3], mipsn32, mips)
     fi
     ;;
 dnl On powerpc64 systems, the C compiler may still be generating 32-bit code.
   powerpc64 )
-    FFCALL_CACHE_EGREP_CPP([64-bit PowerPC], ffcall_cv_host_powerpc64,
-      [defined(__powerpc64__) || defined(_ARCH_PPC64)])
-    if test $ffcall_cv_host_powerpc64 = yes; then
-      host_cpu_abi=powerpc64
-    else
-      host_cpu_abi=powerpc
-    fi
+    FFCALL_SET_CPU_ABI([64-bit PowerPC], ffcall_cv_host_powerpc64,
+      [defined(__powerpc64__) || defined(_ARCH_PPC64)], powerpc64, powerpc)
     ;;
 dnl UltraSPARCs running Linux have `uname -m` = "sparc64", but the C compiler
 dnl still generates 32-bit code.
   sparc | sparc64 )
-    FFCALL_CACHE_EGREP_CPP([64-bit SPARC], ffcall_cv_host_sparc64,
-      [defined(__sparcv9) || defined(__arch64__)])
-    if test $ffcall_cv_host_sparc64 = yes; then
-      host_cpu_abi=sparc64
-    else
-      host_cpu_abi=sparc
-    fi
+    FFCALL_SET_CPU_ABI([64-bit SPARC], ffcall_cv_host_sparc64,
+      [defined(__sparcv9) || defined(__arch64__)], sparc64, sparc)
     ;;
 dnl On x86_64 systems, the C compiler may still be generating 32-bit code.
   x86_64 )
-    FFCALL_CACHE_EGREP_CPP([64-bit x86_64], ffcall_cv_host_x86_64,
-      [defined(__LP64__) || defined(__x86_64__) || defined(__amd64__)])
-    if test $ffcall_cv_host_x86_64 = yes; then
-      host_cpu_abi=x86_64
-    else
-      host_cpu_abi=i386
-    fi
+    FFCALL_SET_CPU_ABI([64-bit x86_64], ffcall_cv_host_x86_64,
+      [defined(__LP64__) || defined(__x86_64__) || defined(__amd64__)],
+      x86_64, i386)
     ;;
   *)
     host_cpu_abi=$host_cpu
