@@ -1,7 +1,8 @@
 2009-04-28  Sam Steingold  <sds@gnu.org>
 
-	* m4/general.m4 (FFCALL_CACHE_EGREP_CPP): abstracted out of ...
-	(FFCALL_CANONICAL_HOST_CPU): use it
+	* m4/general.m4 (FFCALL_CACHE_EGREP_CPP, FFCALL_SET_CPU_ABI):
+	abstracted out of FFCALL_CANONICAL_HOST_CPU
+	(FFCALL_CANONICAL_HOST_CPU): use them
 
 2009-04-27  Max Lapan  <max.lapan@gmail.com>
 	Sam Steingold  <sds@gnu.org>
